samples/_failures_safe/1761298964_908b24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00ab681c.c: In function ‘main’:
./samples/SAFE/__tmp_00ab681c.c:146:9: error: expected declaration or statement at end of input
  146 |         input_buffer[len - 1] = '\0';
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_00ab681c.c:146:9: error: expected declaration or statement at end of input
